k8s/postgres-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
  namespace: togglemaster
spec:
  selector:
    app: postgres-auth
  ports:
  - port: 5432
    targetPort: 5432
