k8s/postgres-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-main
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-main
  template:
    metadata:
      labels:
        app: postgres-main
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-main
  namespace: togglemaster
spec:
  selector:
    app: postgres-main
  ports:
  - port: 5432
    targetPort: 5432
